--- a/ui-webcdu/package.json
+++ b/ui-webcdu/package.json
@@ -31,6 +31,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "elkjs": "^0.9.3",
     "lucide-react": "^0.525.0",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
