--- a/ui-webcdu/Dockerfile
+++ b/ui-webcdu/Dockerfile
@@ -1,7 +1,11 @@
 # Build stage
-FROM node:18-alpine as builder
+FROM node:20-alpine as builder
 
 WORKDIR /app
+
+# Accept build arguments
+ARG VITE_API_URL=http://localhost:8000
+ENV VITE_API_URL=$VITE_API_URL
 
 # Copy package files
 COPY package*.json ./
